<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/namey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/Name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/Topplings"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:id="@+id/checky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/whip"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/choc"
            android:textSize="16sp" />

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/Quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/button_decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decr"
                android:text="@string/dec" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/Number"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="incr"
                android:text="@string/inc" />

        </LinearLayout>
        <EditText
            android:id="@+id/ema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/Order"
            android:textAllCaps="true" />


    </LinearLayout>
</ScrollView>